--- a/qwen3_omni_moe.yaml
+++ b/qwen3_omni_moe.yaml
@@ -6,29 +6,30 @@
 # The following config has been verified on 2x H100-80G GPUs.
 stage_args:
   - stage_id: 0
+    stage_type: llm  # Use llm stage type to launch OmniLLM
     runtime:
-      devices: "0"
+      devices: "0,1"
       max_batch_size: 1
     engine_args:
       model_stage: thinker
       model_arch: Qwen3OmniMoeForConditionalGeneration
       worker_cls: vllm_omni.worker.gpu_ar_worker.GPUARWorker
       scheduler_cls: vllm_omni.core.sched.omni_ar_scheduler.OmniARScheduler
-      gpu_memory_utilization: 0.55
-      enforce_eager: true
+      gpu_memory_utilization: 0.7
+      enforce_eager: false
       trust_remote_code: true
       engine_output_type: latent  # Output hidden states for talker
       distributed_executor_backend: "mp"
       enable_prefix_caching: false
-      max_num_batched_tokens: 32768
+      max_num_batched_tokens: 4096
       hf_config_name: thinker_config
-      # tensor_parallel_size: 1
+      tensor_parallel_size: 2
     final_output: true
     final_output_type: text
     is_comprehension: true
     default_sampling_params:
-      temperature: 0.0
-      top_p: 1.0
+      temperature: 0.4
+      top_p: 0.9
       top_k: 1
       max_tokens: 2048
       seed: 42
@@ -36,21 +37,22 @@ stage_args:
       repetition_penalty: 1.05
 
   - stage_id: 1
+    stage_type: llm  # Use llm stage type to launch OmniLLM
     runtime:
-      devices: "0"
+      devices: "1"
       max_batch_size: 1
     engine_args:
       model_stage: talker
       model_arch: Qwen3OmniMoeForConditionalGeneration
       worker_cls: vllm_omni.worker.gpu_ar_worker.GPUARWorker
       scheduler_cls: vllm_omni.core.sched.omni_ar_scheduler.OmniARScheduler
-      gpu_memory_utilization: 0.38
-      enforce_eager: true
+      gpu_memory_utilization: 0.25
+      enforce_eager: false
       trust_remote_code: true
       engine_output_type: latent  # Output codec codes for code2wav
       # tensor_parallel_size: 2
       enable_prefix_caching: false
-      max_num_batched_tokens: 32768
+      max_num_batched_tokens: 4096
       distributed_executor_backend: "mp"
       hf_config_name: talker_config
     engine_input_source: [0]
@@ -58,7 +60,7 @@ stage_args:
     # final_output: true
     # final_output_type: text
     default_sampling_params:
-      temperature: 0.0
+      temperature: 0.9
       top_k: 50
       max_tokens: 4096
       seed: 42
@@ -67,6 +69,7 @@ stage_args:
       stop_token_ids: [2150]
 
   - stage_id: 2
+    stage_type: llm  # Use llm stage type to launch OmniLLM
     runtime:
       devices: "0"
       max_batch_size: 1
@@ -79,9 +82,9 @@ stage_args:
       trust_remote_code: true
       enable_prefix_caching: false
       engine_output_type: audio  # Final output: audio waveform
-      gpu_memory_utilization: 0.03
+      gpu_memory_utilization: 0.1
       distributed_executor_backend: "mp"
-      max_num_batched_tokens: 1000000
+      max_num_batched_tokens: 100000
       hf_config_name: thinker_config
     engine_input_source: [1]
     custom_process_input_func: vllm_omni.model_executor.stage_input_processors.qwen3_omni.talker2code2wav
